<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="393dp"
        android:layout_height="59dp"
        android:background="#F1534A"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="180dp"
            android:text="@string/reminders_to_have_your_meal"
            android:textSize="17sp" />

        <Switch
            android:id="@+id/mrtstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="310dp"
            android:layout_marginTop="180dp"
            android:checked="false"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="250dp"
            android:text="@string/breakfast"
            android:textColor="#FFF"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="280dp"
            android:text="@string/lunch"
            android:textColor="#FFF"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="310dp"
            android:text="@string/snacks"
            android:textColor="#FFF"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="340dp"
            android:text="@string/dinner"
            android:textColor="#FFF"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/time_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginStart="250dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:src="@drawable/ic_access_alarm_black_24dp" />

            <TextView
                android:id="@+id/bftime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ajkkfkdjkj"
                android:textSize="17sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_piclunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="280dp"
            android:layout_marginStart="250dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_access_alarm_black_24dp"/>

            <TextView
                android:id="@+id/lctime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_picsnacks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="310dp"
            android:layout_marginLeft="250dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_access_alarm_black_24dp"/>

            <TextView
                android:id="@+id/sncktime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_picdinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="340dp"
            android:layout_marginStart="250dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_access_alarm_black_24dp"/>

            <TextView
                android:id="@+id/dntime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"/>

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



